--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN_SM=MTMyNTI3NjU1NTU4NDIxMzEwMw.G7atP9.tyPxTyvfeQN4zjE6wraF7l1nt69KcC8IU52F1A
+TOKEN_SM=MTMyNTI3NjU1NTU4NDIxMzEwMw.GRw-1i.HE2NZhw8zK4n0mMcUj5YYL6rE13TWFu-OxnqNk
