--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN_SM=MTMyNTI3NjU1NTU4NDIxMzEwMw.GRw-1i.HE2NZhw8zK4n0mMcUj5YYL6rE13TWFu-OxnqNk
+TOKEN_SM=MTMyNTI3NjU1NTU4NDIxMzEwMw.Gno2wH.1hd0ahY61i48RnEAQh-QLpqsGiIGvVfh1rOelg
