--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "server-manager-bot",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "A Discord bot for server management",
-  "main": "app.js",
+  "main": "Bcode/DCB.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "nodemon app.js"
+    "start": "node Bcode/DCB.js",
+    "dev": "nodemon Bcode/DCB.js",
+    "reload": "cross-env FORCE_TOKEN_RELOAD=true node Bcode/DCB.js"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "auto-launch": "^5.0.5",
-    "electron": "^28.1.0"
+    "dotenv": "^16.3.1",
+    "express": "^5.1.0",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
-    "electron-builder": "^24.6.4",
-    "nodemon": "^3.0.2"
+    "cross-env": "^7.0.3"
   }
 }
