--- a/Bcode/package.json
+++ b/Bcode/package.json
@@ -14,9 +14,11 @@
     "discord.js": "^14.19.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "undici": "^6.21.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "undici": "^6.21.2"
   }
 }
